--- a/src/ConceptBed/concept-bed-ui/src/app/modules/layout/portal/portal.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/layout/portal/portal.component.html
@@ -1,3 +1,3 @@
 <router-outlet>
-  <mat-spinner *ngIf="isRouteLoading" color="warn"></mat-spinner>
+  <mat-spinner *ngIf="isRouteLoading$ | async" color="warn"></mat-spinner>
 </router-outlet>
