--- a/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       <mat-icon matPrefix>search</mat-icon>
       <input matInput #search type="text" [(ngModel)]="data.filter" placeholder="Search">
     </mat-form-field>
-    <mat-spinner *ngIf="data.loading | async" diameter="24" color="warn"></mat-spinner>
+    <mat-spinner *ngIf="data.loading$ | async" diameter="24" color="warn"></mat-spinner>
   </div>
   <table mat-table [dataSource]="data" matSort>
     <ng-container matColumnDef="id">
@@ -31,5 +31,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator #dataPages [length]="data.length | async" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator #dataPages [length]="data.length$ | async" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </section>
