--- a/src/ConceptBed/concept-bed-ui/src/app/modules/layout/profile/profile.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/layout/profile/profile.component.html
@@ -6,9 +6,9 @@
   <mat-card-subtitle>{{account?.username}}</mat-card-subtitle>
   <mat-divider inset></mat-divider>
   <mat-card-actions>
-    <button mat-button (click)="onLogout()">Logout</button>
+    <button mat-button id="logout" (click)="onLogout()">Logout</button>
   </mat-card-actions>
   <mat-card-footer>
-    <mat-progress-bar mode="query" color="accent" *ngIf="isQuerying"></mat-progress-bar>
+    <mat-progress-bar mode="query" color="accent" *ngIf="isLoading$ | async"></mat-progress-bar>
   </mat-card-footer>
 </mat-card>
