--- a/src/ConceptBed/concept-bed-ui/src/app/app.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header class="mat-elevation-z2"></app-header>
 <mat-sidenav-container (backdropClick)="layout.toggleSidenav(false)">
   <mat-sidenav #sidenav mode="side" class="mat-elevation-z2" [opened]="layout.isSidenavOpen$ | async" (keydown.escape)="layout.toggleSidenav(false)" disableClose>
-    <p>Actions</p>
+    <p class="app-p-1r">Actions</p>
     <router-outlet name="sidenav.actions"></router-outlet>
   </mat-sidenav>
   <mat-sidenav-content>
