--- a/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<section style="display: flex; flex-direction: column;" class="mat-elevation-z4">
-  <div role="toolbar" style="display: flex; align-items: center; padding: 0 1rem;">
+<section class="app-l-flex app-l-flex-column app-m-1r mat-elevation-z4">
+  <div role="toolbar" class="app-l-flex app-l-align-center" style="padding: 0 1rem;">
     <mat-form-field class="search">
       <mat-icon matPrefix>search</mat-icon>
       <input matInput #search type="text" [(ngModel)]="data.filter" placeholder="Search">
@@ -8,24 +8,24 @@
   </div>
   <table mat-table [dataSource]="data" matSort>
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <th mat-header-cell class="app-p-1r" *matHeaderCellDef mat-sort-header> Id. </th>
+      <td mat-cell class="app-p-1r" *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.date | date: 'medium'}} </td>
+      <th mat-header-cell class="app-p-1r" *matHeaderCellDef mat-sort-header> Date </th>
+      <td mat-cell class="app-p-1r" *matCellDef="let element"> {{element.date | date: 'medium'}} </td>
     </ng-container>
     <ng-container matColumnDef="summary">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
-      <td mat-cell *matCellDef="let element"> {{element.summary}} </td>
+      <th mat-header-cell class="app-p-1r" *matHeaderCellDef mat-sort-header> Summary </th>
+      <td mat-cell class="app-p-1r" *matCellDef="let element"> {{element.summary}} </td>
     </ng-container>
     <ng-container matColumnDef="temperature">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Temperature </th>
-      <td mat-cell *matCellDef="let element"> {{element.temperature}} </td>
+      <th mat-header-cell class="app-p-1r" *matHeaderCellDef mat-sort-header> Temperature </th>
+      <td mat-cell class="app-p-1r" *matCellDef="let element"> {{element.temperature}} </td>
     </ng-container>
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+      <th mat-header-cell class="app-p-1r" *matHeaderCellDef mat-sort-header> Status </th>
+      <td mat-cell class="app-p-1r" *matCellDef="let element"> {{element.status}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
