--- a/src/ConceptBed/concept-bed-ui/src/styles.scss
+++ b/src/ConceptBed/concept-bed-ui/src/styles.scss
@@ -19,7 +19,7 @@ $concept-bed-ui-theme: mat.define-dark-theme(
     color: (
       primary: $concept-bed-ui-primary,
       accent: $concept-bed-ui-accent,
-      warn: $concept-bed-ui-warn
+      warn: $concept-bed-ui-warn,
     ),
   )
 );
@@ -66,6 +66,92 @@ body {
     -moz-osx-font-smoothing: grayscale;
   }
 }
+
+.app-l-flex {
+  display: flex;
+}
+
+.app-l-inline-flex {
+  display: inline-flex;
+}
+
+.app-l-flex-column {
+  flex-direction: column;
+}
+
+.app-l-align-center {
+  align-items: center;
+}
+
+.app-l-justify-center {
+  justify-content: center;
+}
+
+.app-l-flex-row {
+  flex-direction: row;
+}
+
+// Generates the following spacing styles:
+// -- Paddings
+//  .app-p-0:   padding: 0;
+//  .app-pl-0:  padding-left: 0;
+//  .app-pt-0:  padding-top: 0;
+//  .app-pr-0:  padding-right: 0;
+//  .app-pb-0:  padding-bottom: 0;
+//  .app-p-1r:  padding: 1rem;
+//  .app-pl-1r: padding-left: 1rem;
+//  .app-pt-1r: padding-top: 1rem;
+//  .app-pr-1r: padding-right: 1rem;
+//  .app-pb-1r: padding-bottom: 1rem;
+//  .app-p-2r:  padding: 2rem;
+//  .app-pl-2r: padding-left: 2rem;
+//  .app-pt-2r: padding-top: 2rem;
+//  .app-pr-2r: padding-right: 2rem;
+//  .app-pb-2r: padding-bottom: 2rem;
+// -- Margins
+//  .app-m-0:   margin: 0;
+//  .app-ml-0:  margin-left: 0;
+//  .app-mt-0:  margin-top: 0;
+//  .app-mr-0:  margin-right: 0;
+//  .app-mb-0:  margin-bottom: 0;
+//  .app-m-1r:  margin: 1rem;
+//  .app-ml-1r: margin-left: 1rem;
+//  .app-mt-1r: margin-top: 1rem;
+//  .app-mr-1r: margin-right: 1rem;
+//  .app-mb-1r: margin-bottom: 1rem;
+//  .app-m-2r:  margin: 2rem;
+//  .app-ml-2r: margin-left: 2rem;
+//  .app-mt-2r: margin-top: 2rem;
+//  .app-mr-2r: margin-right: 2rem;
+//  .app-mb-2r: margin-bottom: 2rem;
+
+$spacing: (
+  0: 0,
+  1r: 1rem,
+  2r: 2rem,
+);
+$directions: (
+  l: left,
+  t: top,
+  r: right,
+  b: bottom,
+);
+
+@mixin spacing($prop, $short) {
+  @each $space-name, $space in $spacing {
+    .app-#{$short}-#{$space-name} {
+      #{$prop}: $space !important;
+    }
+    @each $dir-name, $dir in $directions {
+      .app-#{$short}#{$dir-name}-#{$space-name} {
+        #{$prop}-#{$dir}: $space !important;
+      }
+    }
+  }
+}
+
+@include spacing(padding, p);
+@include spacing(margin, m);
 
 .app-c-profile-picture img {
   width: 2rem;
