fix(Header): Update dashboard toolbar tests logic

--- a/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <section class="app-l-flex app-l-flex-column app-m-1r mat-elevation-z4">
-  <div role="toolbar" class="app-l-flex app-l-align-center" style="padding: 0 1rem;">
+  <div id="toolbar" role="toolbar" class="app-l-flex app-l-align-center" style="padding: 0 1rem;">
     <mat-form-field class="search">
       <mat-icon matPrefix>search</mat-icon>
       <input matInput #search type="text" [(ngModel)]="data.filter" placeholder="Search">
