--- a/src/ConceptBed/concept-bed-ui/src/app/modules/layout/header/header.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/layout/header/header.component.html
@@ -3,10 +3,8 @@
     <mat-icon>menu</mat-icon>
   </button>
   <a mat-button [routerLink]="['']">{{title}}</a>
-  <mat-chip-list aria-label="Breadcrumbs">
-    <mat-chip *ngFor="let segment of segments; index as i">{{segment.title}}</mat-chip>
-    <mat-chip color="primary" selected>Primary fish</mat-chip>
-    <mat-chip color="accent" selected>Accent fish</mat-chip>
+  <mat-chip-list class="app-pl-hr" aria-label="Breadcrumbs" *ngIf="segments.length">
+    <mat-chip *ngFor="let segment of segments">{{segment.title}}</mat-chip>
   </mat-chip-list>
   <span class="mat-spacer"></span>
   <button mat-icon-button id="favorite" aria-label="Example icon-button with heart icon">
