--- a/src/ConceptBed/concept-bed-ui/src/styles.scss
+++ b/src/ConceptBed/concept-bed-ui/src/styles.scss
@@ -79,16 +79,28 @@ body {
   flex-direction: column;
 }
 
+.app-l-flex-row {
+  flex-direction: row;
+}
+
+.app-l-align-start {
+  align-items: flex-start;
+}
+
+.app-l-glex-gap-hr {
+  gap: .5rem;
+}
+
 .app-l-align-center {
   align-items: center;
 }
 
-.app-l-justify-center {
-  justify-content: center;
+.app-l-justify-start {
+  justify-content: flex-start;
 }
 
-.app-l-flex-row {
-  flex-direction: row;
+.app-l-justify-center {
+  justify-content: center;
 }
 
 // Generates the following spacing styles:
