--- a/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.scss
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.scss
@@ -8,8 +8,12 @@
     margin-left: 4px;
   }
 
-  a[mat-flat-button] {
-    display: block;
-    margin: -8px;
+  a[mat-link] {
+    color: white;
+    text-decoration: none;
+
+    &:visited {
+      color: lightgrey;
+    }
   }
 }
