--- a/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard-actions/dashboard-actions.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard-actions/dashboard-actions.component.html
@@ -1,3 +1,4 @@
 <mat-nav-list>
   <a mat-list-item [routerLink]="['']">Weather Data</a>
 </mat-nav-list>
+<router-outlet name="sidenav.actions"></router-outlet>
