--- a/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/ConceptBed/concept-bed-ui/src/app/modules/features/dashboard/components/dashboard/dashboard.component.html
@@ -33,6 +33,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator #dataPages [length]="data.length$ | async" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator #dataPages [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </section>
 <router-outlet></router-outlet>
